--- a/copycat.css
+++ b/copycat.css
@@ -1,5 +1,1 @@
-.copycat{position:relative;}
-#copycat-trigger{position:absolute;top:0;left:0;height:25px;width:25px;background:transparent url('img/edit.png') no-repeat center center;z-index:999;}
-#copycat-trigger:hover{cursor:pointer}
-body.copycat-active #copycat-trigger{width:0;height:0;}
-#copycat-form .hidden{display:none;}
+.copycat{position:relative;}#copycat-trigger{position:absolute;top:0;left:0;height:25px;width:25px;background:transparent url('img/edit.png') no-repeat center center;z-index:999;}#copycat-trigger:hover{cursor:pointer}
